Criando projeto maven do erede