@@ -6,26 +6,51 @@
   <groupId>br.com.userede.erede</groupId>
   <artifactId>erede</artifactId>
   <version>1.0.0</version>
+  <name>erede</name>
+  <url>http://maven.apache.org</url>
+
+
+
+	<properties>
+		<maven.test.failure.ignore>true</maven.test.failure.ignore>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>15</java.version>		
+	</properties>
+	
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-        </configuration>
-      </plugin>
+
+		<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+        <plugin>
+        	<artifactId>maven-clean-plugin</artifactId>
+            <version>3.1.0</version>
+		</plugin>
+                
+                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+        <plugin>
+        	<artifactId>maven-resources-plugin</artifactId>
+            <version>3.1.0</version>
+		</plugin>
+
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
+			<configuration>
+				<release>${java.version}</release>
+				<encoding>UTF-8</encoding>
+				<compilerArgs>
+					--enable-preview
+					<arg>-XDignore.symbol.file</arg>
+                </compilerArgs>
+			</configuration>
+		</plugin>      
     </plugins>
   </build>
   <packaging>jar</packaging>
 
-  <name>erede</name>
-  <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <dependencies>
     <dependency>
